<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="unknown_person">Unknown</string>
    <string name="resend_email" translatable="false">Resend Email</string>
    <string name="azure_api_key" translatable="false">239ccdc75d084c5ba992836575821d56</string>
    <string name="facebook_app_id" translatable="false">206155642763202</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb206155642763202</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">089d77e1898bf3ef59048cc2fe58408b</string>
    <string name="admob_id" translatable="false">ca-app-pub-9305149859515387~7341831189</string>
    <string name="smart_look_key" translatable="false">d7ff361b01308d90362bc955c7a11db003dab48d</string>
    <string name="write_review_prompt">What would you like to review?</string>
    <string name="loading_txt">Loading&#8230;</string>
    <string name="empty_screen">Oops!! An unexpected error occurred</string>
    <string name="please_retry">Please retry after sometime</string>
    <string name="retry">Retry</string>
    <string name="subcategoryName">subCategory</string>
    <string name="location_info">To get personalized recommendations, Please select your preferred location</string>
    <string name="hint_text">What are you looking for ?</string>
    <string name="locality_txt">In which location?</string>
    <string name="error_network">Device is out of network coverage.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="no_result_txt">No result found.</string>
    <string name="invite_referral_screen">Give 25, Get 25!</string>
    <string name="went_wrong">Something went wrong.</string>
    <string name="server_went_wrong">Something went wrong at the server.</string>
    <string name="no_data">Data not found.</string>
    <string name="toast_network_error">Device is out of network coverage.</string>
    <string name="toast_response_error">Some error occurred, please try again later!</string>
    <string name="toast_server_error">Server error </string>
    <string name="fetching_data">Fetching data&#8230;</string>
    <string name="please_select">Please select at least one value</string>
    <string name="no_query">Please enter a search query.</string>
    <string name="no_age_group">There is no age group to filter.</string>
    <string name="no_category_group">There is no category group to filter.</string>
    <string name="ageGroup">Age Group</string>
    <string name="age_grout_txt">Age Group</string>
    <string name="event_dates_txt">Event Dates</string>
    <string name="description_txt">Description</string>
    <string name="contact_txt">Contact</string>
    <string name="about_txt">About</string>
    <string name="event_list">There are no listings found.</string>
    <string name="additional_info">Additional Information</string>
    <string name="address_txt">Address</string>
    <string name="sub_address_txt">Address</string>
    <string name="address_locality_txt">Address</string>
    <string name="top_picks">Top Picks</string>
    <string name="author_img">Author Image</string>
    <string name="title">Article Title</string>
    <string name="author_name">Author Name</string>
    <string name="article_publish_date">Article Publish Date</string>
    <string name="progress_spinner">Progress Spinner</string>
    <string name="submit">SUBMIT</string>
    <string name="add_reply">Type here</string>
    <string name="article_play_notification_text">You are listening to this blog</string>
    <string name="organised_by">Organized By</string>
    <string name="please_select_an_error">Please select at least one option</string>
    <string name="gps_enabled_alert">It seems that location detection is disabled on your phone.Click OK to go to location settings.</string>
    <string name="netwrok_error">Network error</string>
    <string name="transit">TRANSIT</string>
    <string name="write_review">WRITE A REVIEW</string>
    <string name="direction">DIRECTIONS</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="post_title">Momspresso</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="server_error">Some error occurred, please try again later!</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="reminder_selected">You cannot select this</string>
    <string name="activities_txt">Activities</string>
    <string name="duration_txt">duration</string>
    <string name="cost_txt">Cost</string>
    <string name="event_added">Event has been added</string>
    <string name="new_yes">YES</string>
    <string name="new_cancel">CANCEL</string>
    <string name="load_error">Failed to load container</string>
    <string name="example_post_title_placeholder">Article Title</string>
    <string name="example_post_content_placeholder">Share your story here…</string>
    <string name="select_image">Select an image</string>
    <string name="select_image_fail">Select an image (failure demo)</string>
    <string name="select_video">Select a video</string>
    <string name="select_video_fail">Select a video (failure demo)</string>
    <string name="camera_pick">Take Picture From Camera</string>
    <string name="analytics.popup.last30days">Last 30 days</string>
    <string name="analytics.popup.customdates">Custom</string>
    <string name="analytics.popup.improve_page_views">How can I improve my page views?</string>
    <string name="analytics.popup.increase_followers">How can I increase my followers?</string>
    <string name="analytics.popup.rank_calculation">How is this calculated?</string>
    <string name="analytics.popup.improve_rank">How can I improve my rank?</string>
    <string name="analytics.popup.improve_social">How can I improve my social share?</string>
    <string name="videos.dialog.title">Choose a video to upload</string>
    <string name="videos.upload_option.camera">Take video</string>
    <string name="videos.upload_option.gallery">Choose from gallery</string>
    <string name="videos.upload_option.cancel">CANCEL</string>
    <string name="ad.swipe_tootip_text">SWIPE LEFT TO READ NEXT ARTICLE</string>
    <string name="ad.view_all_tags.text">VIEW ALL</string>
    <string name="ad.tags_title.text">This article was posted in the below categories</string>
    <string name="ad.tags_subtitle.text">Follow them to read similar posts</string>
    <string name="ad.follow_author">FOLLOW</string>
    <string name="ad.following_author">FOLLOWING</string>
    <string name="ad.comments.title">COMMENTS</string>
    <string name="ad.comments.no_comments">NO COMMENTS ADDED</string>
    <string name="ad.comments.view_comment">COMMENTS</string>
    <string name="ad.comments.fb_comment">FACEBOOK COMMENT</string>
    <string name="ad.comments.edit_label">Edit</string>
    <string name="ad.comments.save">SAVE</string>
    <string name="ad.comments.toast_empty_comment">Please enter some valid text.</string>
    <string name="ad.comments.toolbar.title">COMMENTS</string>
    <string name="ad.comments.replying_to">You are replying to %1$s</string>
    <string name="ad.bottom_bar.facebook">FACEBOOK</string>
    <string name="ad.bottom_bar.whatsapp">WHATSAPP</string>
    <string name="ad.bottom_bar.email">EMAIL</string>
    <string name="ad.bottom_bar.generic_share">SHARE</string>
    <string name="ad.bottom_bar.bookmark">BOOKMARK</string>
    <string name="ad.bottom_bar.like">LIKE</string>
    <string name="ad.recent_logs_from.title">MORE FROM AUTHOR</string>
    <string name="ad.share.follow_author">FOLLOW %1$s</string>
    <string name="ad.trending.title">TRENDING BLOGS</string>
    <string name="ad.write_blog">WRITE A BLOG</string>
    <string name="ad.tts.toast_unplayable_article">Unable to play this article</string>
    <string name="vd.recent_videos_from.title">RECENT VIDEOS FROM</string>
    <string name="vd.trending.title">TRENDING VIDEOS</string>
    <string name="confirmation_dialog.delete_draft.message">Are you sure you want to delete your draft?</string>
    <string name="confirmation_dialog.no">NO</string>
    <string name="confirmation_dialog.yes">YES</string>
    <string name="editor.spell_check.title">Spellcheck</string>
    <string name="editor.spell_check.message">Are you sure you have completed the spellcheck?</string>
    <string name="editor.spell_check.no">NO</string>
    <string name="editor.spell_check.continue">YES CONTINUE PUBLISHING</string>
    <string name="editor.banner.message">Blog in a language of your choice</string>
    <string name="editor.last_saved_at">Last saved at %1$s</string>
    <string name="editor.last_saved_on">Last saved on %1$s</string>
    <string name="dob">Date of Birth</string>
    <string name="label_select_video">Select Video</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="publish_article.upload_image.change_photo">Change Image</string>
    <string name="publish_article.upload_image.please_upload_or_choose_image">Please upload a picture or choose from the images shown below to continue</string>
    <string name="change_city.fetch_available_cities">Please wait while we fetch the list of available cities</string>
    <string name="permision_available_storage">Storage Permission has been granted.</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permissions_not_granted">Required permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_audio_rationale">Audio permission is needed to record Audio.</string>
    <string name="permission_storage_rationale">Storage permission is needed to pick files.</string>
    <string name="permission_location_rationale">Location permission is required to show relevant events and articles.</string>
    <string name="permission_phone_state_rationale">Phone state permission is required to keep you updated with latest content via notifications.</string>
    <string name="permision_available_init">All required permissions have been granted.</string>
    <string name="permission_calendar_rationale">Calendar permission is needed to add a reminder.</string>
    <string name="app_settings">App Settings</string>
    <string name="dialog_thanks_for_interest">Thanks for your interest!</string>
    <string name="dialog_register_for_mymoney">For applying to the campaign, you first need to register for Momspresso MyMoney.</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="profile_setting">Profile settings</string>
    <string name="accounts">Account</string>
    <string name="personal_info">Personal info</string>
    <string name="payment_details">Payment details</string>
    <string name="social_accounts">Social accounts</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="report_spams">Report spam</string>
    <string name="app_version">App Version</string>
    <string name="logout">Logout</string>
    <string name="mymoney_info">MyMoney Dashboard</string>
</resources>