<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/imvAuthorThumbContainer"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp" >

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/imvAuthorThumb1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/author_img"
                android:src="@drawable/default_img"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imvAuthorThumb"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/author_img"
                android:src="@drawable/default_img" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txvArticleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imvAuthorThumbContainer"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingLeft="10dp"
            android:singleLine="false"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/btn_bg_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txvArticleTitle"
            android:layout_alignParentBottom="true"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/author_name"
            android:textColor="#545454"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvPublishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="@string/article_publish_date"
            android:textColor="@color/gray2"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>