<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color"
    android:paddingBottom="6dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="6dp">

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvAuthorThumb"
            android:layout_width="100dp"
            android:layout_height="66dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/author_img" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txvArticleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imvAuthorThumbContainer"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:singleLine="false"
                android:text="@string/title"
                android:textColor="@color/black_color"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txvViewCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight=".6"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:text="@string/author_name"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txvPublishDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight=".4"
                    android:gravity="right"
                    android:singleLine="true"
                    android:text="@string/article_publish_date"
                    android:textColor="@color/gray2"
                    android:textSize="14sp" />

            </LinearLayout>
            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_more_vert_black_24dp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>